--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ logging.level.org.springframework=INFO
 spring.resources.cache.cachecontrol.max-age=12h
 
 server.port=8888
+
+front_url=http://localhost:3000
