--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
   <dependencies>
     <!-- Spring and Spring Boot dependencies -->
     <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
